Repair multi col alignment problem

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -246,12 +246,3 @@ span.picture {
     border: 0;
   }
 }
-
-/* horizontal list */
-
-.hol {
-  li {
-      float: left;
-      // margin-left: 15px;
-    }
-}
